[package]
name = "flowers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
maybe-debug = "0.1.0"
nalgebra = { version = "0.32.3", features = ["rand"] }
rand = "0.8.5"
rand_chacha = { version = "0.3.1" }
rand_distr = "0.4.3"
